--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -24,4 +24,19 @@
   "category.tool_pouch_upgrade": "Mejora de Bolsa de Herramientas",
   "category.ability": "Habilidad",
   "category.tool": "Herramienta"
+  ,"intro.heading": "Rastreador de Compleción de Hollow Knight: Silksong"
+  ,"intro.p1": "Usa este checklist interactivo gratuito para planificar y verificar tu progreso hacia el 100% (y futuro 112% si aplica) en Hollow Knight: Silksong. Marca mejoras de la aguja, bobinas de seda, crestas, habilidades, herramientas y más. Tu progreso se guarda de forma local (sin cuenta) para que puedas volver cuando quieras."
+  ,"intro.p2": "La interfaz en español está disponible: cambia el idioma con el selector superior. Los datos irán evolucionando a medida que se publique información oficial."
+  ,"intro.noscript": "Nota: Este checklist necesita JavaScript activado para funcionar. Aun así puedes ver abajo una lista simplificada de categorías."
+  ,"fallback.categories.needle_upgrades": "Mejoras de la Aguja"
+  ,"fallback.categories.silk_spools": "Bobinas de Seda"
+  ,"fallback.categories.silk_hearts": "Corazones de Seda"
+  ,"fallback.categories.ancient_masks": "Máscaras Antiguas"
+  ,"fallback.categories.crests": "Crestas"
+  ,"fallback.categories.silk_skills": "Habilidades de Seda"
+  ,"fallback.categories.crafting_kit_upgrades": "Mejoras del Kit de Fabricación"
+  ,"fallback.categories.tool_pouch_upgrades": "Mejoras de la Bolsa de Herramientas"
+  ,"fallback.categories.abilities": "Habilidades"
+  ,"fallback.categories.tools": "Herramientas"
+  ,"fallback.categories.misc": "Misceláneo"
 }
