--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -6,7 +6,6 @@
   "reset.confirm1": "Reset all progress?",
   "reset.confirm2": "This action cannot be undone. Proceed?",
   "percent.tooltip": "Total completion",
-  "footer.note": "Dataset enriched with current public Silksong info (weights sum to 100%).",
   "done.label": "Done",
   "items.remaining.singular": "1 item remaining",
   "items.remaining.plural": "{n} items remaining",
@@ -39,4 +38,28 @@
   ,"fallback.categories.abilities": "Abilities"
   ,"fallback.categories.tools": "Tools"
   ,"fallback.categories.misc": "Miscellaneous"
+  ,"section.howto.title": "How to Use This Checklist"
+  ,"section.howto.p1": "Browse categories, click an item to mark it as obtained. Progress lives only in your browser (localStorage). Clearing data resets it."
+  ,"section.howto.p2": "Placeholder or inferred entries will be replaced with verified Silksong data when official info is released."
+  ,"section.howto.p3": "Switch language (EN/ES) any time — progress is shared. Contribute improvements via the repository."
+  ,"section.features.title": "Features"
+  ,"section.features.list1": "Lightweight, minimal tracking."
+  ,"section.features.list2": "Offline capable core assets."
+  ,"section.features.list3": "Progress percent + remaining items."
+  ,"section.features.list4": "English / Spanish localization."
+  ,"section.features.list5": "Expandable category panels."
+  ,"section.faq.title": "FAQ"
+  ,"section.faq.q.data": "Does this store my data online?"
+  ,"section.faq.a.data": "No. Only in your browser. An export feature is planned."
+  ,"section.faq.q.change": "Will values change when the game releases?"
+  ,"section.faq.a.change": "Yes—provisional entries are updated; structure aims to remain stable."
+  ,"section.faq.q.ads": "Why don't I see ads yet?"
+  ,"section.faq.a.ads": "Site under initial AdSense review; ads will appear once approved."
+  ,"section.faq.q.suggest": "Can I suggest new categories?"
+  ,"section.faq.a.suggest": "Yes—open an issue in the repository."
+  ,"section.faq.q.official": "Is this official?"
+  ,"section.faq.a.official": "No. Independent fan project."
+  ,"section.disclaimer.title": "Disclaimer"
+  ,"section.disclaimer.text": "Hollow Knight and Silksong are trademarks of Team Cherry. This fan site is not affiliated with or endorsed by Team Cherry."
+  ,"footer.note": "Provisional dataset inspired by Hollow Knight pending official Silksong data; will be replaced with verified information."
 }
