UI polish: controls alignment, guide button label/icon, reset icon, deferred mid ad, flags on language select, updated footer note & i18n

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -61,5 +61,6 @@
   ,"section.faq.a.official": "No. Independent fan project."
   ,"section.disclaimer.title": "Disclaimer"
   ,"section.disclaimer.text": "Hollow Knight and Silksong are trademarks of Team Cherry. This fan site is not affiliated with or endorsed by Team Cherry."
-  ,"footer.note": "Provisional dataset inspired by Hollow Knight pending official Silksong data; will be replaced with verified information."
+  ,"guide.open": "Guide"
+  ,"footer.note": "Fan-made project. Hollow Knight & Silksong are trademarks of Team Cherry. Provisional data will be updated with official information."
 }
