--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -61,5 +61,6 @@
   ,"section.faq.a.official": "No. Proyecto fan independiente."
   ,"section.disclaimer.title": "Aviso legal"
   ,"section.disclaimer.text": "Hollow Knight y Silksong son marcas de Team Cherry. Este sitio fan no está afiliado ni respaldado por Team Cherry."
-  ,"footer.note": "Dataset provisional inspirado en Hollow Knight hasta disponer de datos oficiales de Silksong; será reemplazado por información verificada."
+  ,"guide.open": "Guía"
+  ,"footer.note": "Proyecto hecho por fans. Hollow Knight y Silksong son marcas de Team Cherry. Los datos provisionales se actualizarán con información oficial."
 }
