feat: categorías opcionales (Bosses, Pulgas) fuera del % + UI y analytics

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -62,5 +62,6 @@
   ,"section.disclaimer.title": "Aviso legal"
   ,"section.disclaimer.text": "Hollow Knight y Silksong son marcas de Team Cherry. Este sitio fan no está afiliado ni respaldado por Team Cherry."
   ,"guide.open": "GUÍA"
-  ,"footer.note": "Proyecto hecho por fans. Hollow Knight y Silksong son marcas de Team Cherry. Los datos provisionales se actualizarán con información oficial."
+  ,"footer.note": "Proyecto hecho por fans. Hollow Knight y Silksong son marcas de Team Cherry. Los datos provisionales se actualizarán con información oficial.",
+  "optional.label": "Opcional"
 }
