--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -62,5 +62,6 @@
   ,"section.disclaimer.title": "Disclaimer"
   ,"section.disclaimer.text": "Hollow Knight and Silksong are trademarks of Team Cherry. This fan site is not affiliated with or endorsed by Team Cherry."
   ,"guide.open": "GUIDE"
-  ,"footer.note": "Fan-made project. Hollow Knight & Silksong are trademarks of Team Cherry. Provisional data will be updated with official information."
+  ,"footer.note": "Fan-made project. Hollow Knight & Silksong are trademarks of Team Cherry. Provisional data will be updated with official information.",
+  "optional.label": "Optional"
 }
