feat: actualizar nota pulgas (Egg of Flealia) y quitar badge/optional en categoría pulgas

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -66,5 +66,6 @@
   "optional.label": "Optional",
   "category.pulgas": "Fleas",
   "category.bosses": "Bosses",
-  "category.optional.note": "This category does not count towards the 100% completion."
+  "category.optional.note": "This category does not count towards the 100% completion.",
+  "category.pulgas.note": "Fleas are required to obtain the 'Egg of Flealia' which is needed for 100%"
 }
