--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -26,6 +26,7 @@
   "category.pulgas": "Pulgas",
   "category.bosses": "Jefes",
   "category.optional.note": "Esta categoría no suma para el 100% del juego.",
+  "category.pulgas.note": "Las pulgas son necesarias para conseguir el objeto 'Egg of Flealia' que es necesario para el 100%",
   "intro.heading": "Rastreador de Compleción de Hollow Knight: Silksong",
   "intro.p1": "Usa este checklist interactivo gratuito para planificar y verificar tu progreso hacia el 100% (y futuro 112% si aplica) en Hollow Knight: Silksong. Marca mejoras de la aguja, bobinas de seda, blasones, habilidades, herramientas y más. Tu progreso se guarda automáticamente en tu navegador, así que puedes volver cuando quieras sin necesidad de iniciar sesión.",
   "intro.p2": "La interfaz en español está disponible: cambia el idioma con el selector superior. Los datos irán evolucionando a medida que se publique información oficial.",
