--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -67,4 +67,6 @@
   "guide.open": "GUÍA",
   "footer.note": "Proyecto hecho por fans. Hollow Knight y Silksong son marcas de Team Cherry. Los datos provisionales se actualizarán con información oficial.",
   "optional.label": "Opcional"
+  ,"expand": "Expandir"
+  ,"collapse": "Contraer"
 }
