--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -69,4 +69,25 @@
   "category.pulgas": "Fleas",
   "category.bosses": "Bosses",
   "category.optional.note": "This category does not count towards the 100% completion."
+  ,"feedback.open": "Feedback"
+  ,"feedback.title": "Send Feedback"
+  ,"feedback.type.label": "Type"
+  ,"feedback.type.bug": "Bug"
+  ,"feedback.type.idea": "Idea"
+  ,"feedback.type.data": "Incorrect data"
+  ,"feedback.type.other": "Other"
+  ,"feedback.message.label": "Message"
+  ,"feedback.placeholder": "Write your feedback (min 10 chars)..."
+  ,"feedback.minchars": "Please write at least 10 characters."
+  ,"feedback.include.progress": "Include progress %"
+  ,"feedback.cancel": "Cancel"
+  ,"feedback.send": "Send"
+  ,"feedback.status.sending": "Sending..."
+  ,"feedback.status.sent": "Feedback sent. Thank you!"
+  ,"feedback.status.error": "Error sending feedback. Try again later."
+  ,"feedback.type.prefix.bug": "[BUG]"
+  ,"feedback.type.prefix.idea": "[IDEA]"
+  ,"feedback.type.prefix.data": "[DATA]"
+  ,"feedback.type.prefix.other": "[OTHER]"
+  ,"feedback.status.tooShort": "Message too short."
 }
