refactor: remove service worker & update banner; finalize minimal locales

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -12,8 +12,20 @@
   "collapse": "Collapse",
   "percent.tooltip": "Total completion",
   "dataset.errors.title": "Dataset validation issues:",
-  "update.available": "New version available",
-  "update.reload": "Reload",
+  "import": "Import",
+  "export": "Export",
+  "info": "Info",
+  "fallback.categories.needle_upgrades": "Needle Upgrades",
+  "fallback.categories.silk_spools": "Silk Spools",
+  "fallback.categories.silk_hearts": "Silk Hearts",
+  "fallback.categories.ancient_masks": "Ancient Masks",
+  "fallback.categories.crests": "Crests",
+  "fallback.categories.silk_skills": "Silk Skills",
+  "fallback.categories.crafting_kit_upgrades": "Crafting Kit Upgrades",
+  "fallback.categories.tool_pouch_upgrades": "Tool Pouch Upgrades",
+  "fallback.categories.abilities": "Abilities",
+  "fallback.categories.tools": "Tools",
+  "fallback.categories.misc": "Miscellaneous",
   "info.short.title": "Info",
   "info.short.intro": "An interactive Hollow Knight: Silksong checklist to help you track progress toward 100%.",
   "info.short.save": "Your progress is saved automatically in your browser (no account needed).",
