--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -12,8 +12,20 @@
   "collapse": "Contraer",
   "percent.tooltip": "Progreso total",
   "dataset.errors.title": "Problemas de validación de datos:",
-  "update.available": "Nueva versión disponible",
-  "update.reload": "Recargar",
+  "import": "Importar",
+  "export": "Exportar",
+  "info": "Info",
+  "fallback.categories.needle_upgrades": "Mejoras de la Aguja",
+  "fallback.categories.silk_spools": "Bobinas de Seda",
+  "fallback.categories.silk_hearts": "Corazones de Seda",
+  "fallback.categories.ancient_masks": "Máscaras Antiguas",
+  "fallback.categories.crests": "Crestas",
+  "fallback.categories.silk_skills": "Habilidades de Seda",
+  "fallback.categories.crafting_kit_upgrades": "Mejoras del Kit de Fabricación",
+  "fallback.categories.tool_pouch_upgrades": "Mejoras de la Bolsa de Herramientas",
+  "fallback.categories.abilities": "Habilidades",
+  "fallback.categories.tools": "Herramientas",
+  "fallback.categories.misc": "Misceláneo",
   "info.short.title": "Información",
   "info.short.intro": "Una checklist interactiva de Hollow Knight: Silksong que te ayuda a controlar tu progreso hasta el 100%.",
   "info.short.save": "Tu progreso se guarda automáticamente en tu navegador (no necesitas cuenta).",
