--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -32,5 +32,18 @@
   "info.short.optional": "Optional elements (Bosses, Fleas) don’t count toward the 100% but you can still track them.",
   "info.short.transfer": "Export creates a backup file you can keep; Import restores that file on another device.",
   "info.short.langs": "Available in English and Spanish; more languages may be added.",
-  "info.short.credits": "Fan project made by fans for fans. Team Cherry is not involved."
+  "info.short.credits": "Fan project made by fans for fans. Team Cherry is not involved.",
+  "category.needle_upgrade": "Needle Upgrades",
+  "category.ancient_mask": "Ancient Masks",
+  "category.silk_spool": "Silk Spools",
+  "category.silk_heart": "Silk Hearts",
+  "category.misc": "Miscellaneous",
+  "category.crest": "Crests",
+  "category.silk_skill": "Silk Skills",
+  "category.crafting_kit_upgrade": "Crafting Kit Upgrades",
+  "category.tool_pouch_upgrade": "Tool Pouch Upgrades",
+  "category.ability": "Abilities",
+  "category.tool": "Tools",
+  "category.pulgas": "Fleas",
+  "category.bosses": "Bosses"
 }
